src/corelib/global/qlibraryinfo.cpp
@@ -576,7 +576,7 @@ static QString getRelocatablePrefix()
     Dl_info info;
     int result = dladdr(reinterpret_cast<void *>(&QLibraryInfo::isDebugBuild), &info);
     if (result > 0 && info.dli_fname)
-        prefixPath = prefixFromQtCoreLibraryHelper(QString::fromLatin1(info.dli_fname));
+        prefixPath = prefixFromQtCoreLibraryHelper(QString::fromLocal8Bit(info.dli_fname));
 #elif defined(Q_OS_WIN)
     HMODULE hModule = getWindowsModuleHandle();
     const int kBufferSize = 4096;
@@ -590,7 +590,7 @@ static QString getRelocatablePrefix()
         // QtCore DLL is next to the executable. This is either a windeployqt'ed executable or an
         // executable within the QT_HOST_BIN directory. We're detecting the latter case by checking
         // whether there's an import library corresponding to our QtCore DLL in PREFIX/lib.
-        const QString libdir = QString::fromLatin1(
+        const QString libdir = QString::fromLocal8Bit(
             qt_configure_strs + qt_configure_str_offsets[QLibraryInfo::LibrariesPath - 1]);
         const QLatin1Char slash('/');
 #if defined(Q_CC_MINGW)
@@ -622,7 +622,7 @@ static QString getRelocatablePrefix()
     // QTBUG-78948: libQt5Core.so may be located in subdirectories below libdir.
     // See "Hardware capabilities" in the ld.so documentation and the Qt 5.3.0
     // changelog regarding SSE2 support.
-    const QString libdir = QString::fromLatin1(
+    const QString libdir = QString::fromLocal8Bit(
         qt_configure_strs + qt_configure_str_offsets[QLibraryInfo::LibrariesPath - 1]);
     QDir prefixDir(prefixPath);
     while (!prefixDir.exists(libdir)) {
